# byreal-jupiter-integration

./: Cargo.toml
byreal-clmm-common/: Cargo.toml
byreal-clmm-common/src/: lib.rs
byreal-clmm-common/tests/: amm_behavior.rs  dynamic_fee_parity.rs
byreal-clmm-jupiter-integration/: Cargo.toml
byreal-clmm-jupiter-integration/src/: lib.rs
byreal-clmm-jupiter-integration/tests/: dynamic_fee_routing.rs  jupiter_smoke.rs  litesvm_legacy_pool.rs  live_dynamic_pool.rs  live_pool_quote.rs
docs/plans/: 2026-05-07-001-dynamic-fee-sdk-test-gap-plan.md
src/: lib.rs
