[package]
name = "byreal-clmm-jupiter-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
anchor-lang = "0.31.1"
anyhow = "1.0.97"
solana-sdk = "2.3.0"
anchor-spl = "0.31.1"
mpl-token-metadata = "=5.1.1"
solana-account-info = "2.3.0"
solana-program = "2.3.0"

# Jupiter dependencies
jupiter-amm-interface = "0.5.1"

# Raydium dependencies
byreal-clmm = { git = "https://github.com/byreal-git/byreal-clmm.git", rev = "2badd50e51904bf292bc55055406b0acaea4a43f" }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
solana-client = "2.3.0"

[features]
mainnet = []
devnet = []
