[package]
name = "byreal-clmm-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
anchor-lang = "1.0.0"
anyhow = "1.0.97"
solana-pubkey = "3.0.0"
solana-program = "3.0.0"

# Raydium dependencies
byreal-clmm = { git = "https://github.com/jup-ag/byreal-clmm.git", rev = "99b913b2e7d65a95e88f279a2d85a7cfeeab0df1", features = [
    "no-entrypoint",
] }
bytemuck = { version = "1", features = ["derive"] }

[features]
mainnet = []
devnet = []
