[package]
name = "byreal-clmm-jupiter-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
anchor-lang = "0.31.1"
anyhow = "1.0.97"
solana-sdk = "2.3.0"
anchor-spl = "0.31.1"
mpl-token-metadata = "=5.1.1"
solana-account-info = "2.3.0"
solana-program = "2.3.0"

# Jupiter dependencies
jupiter-amm-interface = "0.6.0"

# Raydium dependencies
byreal-clmm-common = { path = "../byreal-clmm-common" }
bytemuck = { version = "1", features = ["derive"] }

# LiteSVM + Solana 3.x stack (only used in optional litesvm test)
litesvm = { version = "0.8.2", optional = true }
solana-account = { version = "~3.0", optional = true }
solana-clock = { version = "~3.0", optional = true }
solana-instruction = { version = "~3.0", optional = true }
solana-keypair = { version = "~3.0", optional = true }
solana-message = { version = "~3.0", optional = true }
solana-pubkey = { version = "~3.0", optional = true }
solana-signer = { version = "~3.0", optional = true }
solana-transaction = { version = "=3.0.1", optional = true }

[dev-dependencies]
solana-client = "2.3.0"

[features]
mainnet = []
devnet = []
with-litesvm = [
    "dep:litesvm",
    "dep:solana-account",
    "dep:solana-clock",
    "dep:solana-instruction",
    "dep:solana-keypair",
    "dep:solana-message",
    "dep:solana-pubkey",
    "dep:solana-signer",
    "dep:solana-transaction",
]
debug-swap-steps = []
