[package]
name = "byreal-clmm-jupiter-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
anchor-lang = "1.0.0"
anyhow = "1.0.97"
anchor-spl = "1.0.0"
solana-account-info = "3.1.1"
solana-instruction = "3.1.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"

# Jupiter dependencies
jupiter-amm-interface = { version = ">=1.0.0-beta.0, <2" }

# Raydium dependencies
byreal-clmm-common = { path = "../byreal-clmm-common" }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
solana-client = "3.1.12"

[features]
mainnet = []
devnet = []
with-litesvm = []
debug-swap-steps = []
