[package]
name = "byreal-clmm-jupiter-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
anchor-lang = "1.0.2"
anyhow = "1.0"
solana-instruction = "3.1.0"
solana-address = { version = "2.6.0", features = ["borsh"] }
solana-program-pack = "3.0"
spl-token-interface = "2.0"
spl-token-2022-interface = "2.0"
pyth-solana-receiver-sdk = { git = "https://github.com/jup-ag/pyth-crosschain.git", rev = "f80b82011a227ab541a0b16b3eb57a15bf6a0ad6" }

# Raydium dependencies
byreal-clmm-common = { path = "../byreal-clmm-common" }

[dev-dependencies]
bincode = "1.3"
solana-client = "3.1.12"
bytemuck = { version = "1", features = ["derive"] }
jupiter-amm-interface = { version = ">=1.0.0-beta.0, <2" }
solana-program = "3.0.0"

[features]
mainnet = ["byreal-clmm-common/mainnet"]
devnet = ["byreal-clmm-common/devnet"]
dynamic-pool = []
debug-swap-steps = []

[lib]
test = false
doctest = false
